--- a/index.html
+++ b/index.html
@@ -4,10 +4,119 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>12bool</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-2 flex">
+        col
+      </div>
+      <div class="col-5 flex">
+        col
+      </div>
+      <div class="col-5 flex">
+        col
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 flex">
+       12 col
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-8 flex">
+        8 col
+      </div>
+      <div class="col-2 flex">
+        2 col
+      </div>
+      <div class="col-2 flex">
+        2 col
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 flex">
+        1 col
+      </div>
+      <div class="col-2 flex">
+        2 col
+      </div>
+      <div class="col-2 flex">
+        2 col
+      </div>
+      <div class="col-6 flex">
+        6 col
+      </div>
+      <div class="col-1 flex">
+        1 col
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6 flex">
+        <div class="col-1 flex">
+          Nested 2 col
+        </div>
+        <div class="col-1 flex">
+          Nested 2 col
+        </div>
+        <div class="col-4 flex">
+          Nested 8 col
+        </div>
+      </div>
+      <div class="col-6 flex">
+        <div class="col-6 flex">
+          Nested 6 col
+        </div>
+        <div class="col-6 flex">
+          Nested 6 col
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
