--- a/index.html
+++ b/index.html
@@ -5,116 +5,239 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <title>12bool</title>
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
     </div>
 
     <div class="row">
-      <div class="col-2 flex">
+      <div class="col-xs-2">
         col
       </div>
-      <div class="col-5 flex">
+      <div class="col-xs-5">
         col
       </div>
-      <div class="col-5 flex">
+      <div class="col-xs-5">
         col
       </div>
     </div>
 
     <div class="row">
-      <div class="col-12 flex">
+      <div class="col-xs-12">
        12 col
       </div>
     </div>
 
     <div class="row">
-      <div class="col-8 flex">
+      <div class="col-xs-8">
         8 col
       </div>
-      <div class="col-2 flex">
+      <div class="col-xs-2">
         2 col
       </div>
-      <div class="col-2 flex">
+      <div class="col-xs-2">
         2 col
       </div>
     </div>
 
     <div class="row">
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
-      <div class="col-2 flex">
+      <div class="col-xs-2">
         2 col
       </div>
-      <div class="col-2 flex">
+      <div class="col-xs-2">
         2 col
       </div>
-      <div class="col-6 flex">
+      <div class="col-xs-6">
         6 col
       </div>
-      <div class="col-1 flex">
+      <div class="col-xs-1">
         1 col
       </div>
     </div>
 
     <div class="row">
-      <div class="col-6 flex">
-        <div class="col-1 flex">
-          Nested 2 col
-        </div>
-        <div class="col-1 flex">
-          Nested 2 col
-        </div>
-        <div class="col-4 flex">
-          Nested 8 col
+      <div class="col-xs-6">
+        <div class="nested row">
+          <div class="col-xs-2">
+           <span class="text">
+             Nested 2 col
+           </span>
+          </div>
+          <div class="col-xs-2">
+            <span class="text">
+              Nested 2 col
+            </span>
+          </div>
+          <div class="col-xs-8">
+            <span class="text">
+              Nested 8 col
+            </span>
+          </div>
         </div>
       </div>
-      <div class="col-6 flex">
-        <div class="col-6 flex">
-          Nested 6 col
+
+      <div class="col-xs-6">
+        <div class="nested row">
+          <div class="col-xs-6">
+            <span class="text">
+              Nested 6 col
+            </span>
+          </div>
+          <div class="col-xs-6">
+            <span class="text">
+              Nested 6 col
+            </span>
+          </div>
         </div>
-        <div class="col-6 flex">
-          Nested 6 col
-        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-1">
+      </div>
+      <div class="col-xs-11">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-2">
+      </div>
+      <div class="col-xs-10">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-3">
+      </div>
+      <div class="col-xs-9">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-4">
+      </div>
+      <div class="col-xs-8">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-5">
+      </div>
+      <div class="col-xs-7">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-6">
+      </div>
+      <div class="col-xs-6">
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+  
+    <div class="row">
+      <div class="col-xs-1 col-xs-offset-11">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-2 col-xs-offset-10">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-3 col-xs-offset-9">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-4 col-xs-offset-8">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-5 col-xs-offset-7">
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xs-6 col-xs-offset-6">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-7 col-xs-offset-5">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-9 col-xs-offset-3">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-2">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-11 col-xs-offset-1">
       </div>
     </div>
   </div>
